# malwi-box

./: .dockerignore  .gitignore  Dockerfile.test  README.md  docker-compose.test.yml  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
examples/: ctypes_dlopen.py  env_var_write.py  executable_control.py  file_create.py  file_delete.py  file_modify.py  file_read.py  hello_world.py  http_payload_verify.py  network_request.py  os_exec.py  system_command.py
scripts/: bump-version.sh  test-docker.sh
src/malwi_box/: __init__.py  _audit_hook.cpp  cli.py  engine.py  formatting.py  hook.py  malwi_box.cpp  malwi_python  malwi_python.c  toml.py  venv.py  wrapper.py
src/malwi_box/hooks/: force_hook.py  review_hook.py  run_hook.py
tests/: test_audit_hook.py  test_cli.py  test_engine.py  test_install.py  test_malwi_python.py  test_prompt.py  test_security.py  test_wrapper.py
